--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<!-- <meta charset="utf-8" /> -->
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- <script src="https://checkout.flutterwave.com/v3.js"></script> -->
